; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dce120/extr_dce120_hw_sequencer.c_dce120_hw_sequencer_construct.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/dce120/extr_dce120_hw_sequencer.c_dce120_hw_sequencer_construct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dc = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@dce120_enable_display_power_gating = common dso_local global i32 0, align 4
@dce120_update_dchub = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @dce120_hw_sequencer_construct(%struct.dc* %0) #0 {
  %2 = alloca %struct.dc*, align 8
  store %struct.dc* %0, %struct.dc** %2, align 8
  %3 = load %struct.dc*, %struct.dc** %2, align 8
  %4 = call i32 @dce110_hw_sequencer_construct(%struct.dc* %3)
  %5 = load i32, i32* @dce120_enable_display_power_gating, align 4
  %6 = load %struct.dc*, %struct.dc** %2, align 8
  %7 = getelementptr inbounds %struct.dc, %struct.dc* %6, i32 0, i32 0
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 1
  store i32 %5, i32* %8, align 4
  %9 = load i32, i32* @dce120_update_dchub, align 4
  %10 = load %struct.dc*, %struct.dc** %2, align 8
  %11 = getelementptr inbounds %struct.dc, %struct.dc* %10, i32 0, i32 0
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  store i32 %9, i32* %12, align 4
  ret void
}

declare dso_local i32 @dce110_hw_sequencer_construct(%struct.dc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
